# CLAppy-cli

./: Cargo.toml  README.md  installer.nsi  mkdocs.yml  openwarp.toml
.github/workflows/: ci.yml
app/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  typedoc.json
app/.husky/_/: husky.sh
app/.storybook/: main.ts  preview.ts
app/src/: index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.config.json
app/src-tauri/src/: main.rs
crates/clappy-cli/: Cargo.toml
crates/clappy-cli/src/: context.rs  lib.rs  main.rs
crates/clappy-e2e/: Cargo.toml
crates/clappy-e2e/features/: model.feature  plugin.feature  safety.feature
crates/clappy-e2e/src/: main.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: lib.rs
crates/open-cli/: Cargo.toml
crates/open-cli/src/: main.rs
crates/openwarp-cli/: Cargo.toml
crates/openwarp-cli/src/: lib.rs  main.rs
crates/openwarp-e2e/: Cargo.toml
crates/openwarp-e2e/features/: smart_mode.feature  translate.feature
crates/openwarp-e2e/src/: main.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: lib.rs
docs/: ai-router.md  architecture.md  byom.md  index.md  plugin-api.md  plugin-sdk.md  plugin_api.yaml  quick-start.md  release.md  roadmap.md  storybook.md
docs/typedoc/: hierarchy.html  index.html
docs/typedoc/assets/: search.js
plugins/: gif_search.toml  gif_search.wat  openurl.toml  openurl.wat
scripts/: build_macos.sh  build_setup.ps1  build_windows.ps1  generate_sbom.sh  windows_env.ps1
share/examples/: nl_to_shell.sh
