[package]
name = "clappy-cli"
version = "0.1.0"
edition = "2024"
authors = ["CLAppy Contributors"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
terminal-core = { path = "../terminal-core" }
llm-client = { path = "../llm-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tokio-stream = "0.1"
rocksdb = "0.21"
once_cell = "1"
regex = "1"
colored = "2"
open = "5"
plugin-sdk = { path = "../plugin-sdk" }
toml = "0.8"
wasmtime = "19"

[dev-dependencies]
rstest = "0.18"
async-trait = "0.1"
tempfile = "3"
