[package]
name = "llm-client"
version = "1.0.0"
edition = "2024"
authors = ["CLAppy Contributors"]

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
regex = "1"

[dev-dependencies]
rstest = "0.18"
wiremock = "0.6"
