[package]
name = "terminal-core"
version = "1.0.0"
edition = "2024"
authors = ["CLAppy Contributors"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "process", "io-util"] }
tokio-pty-process = "0.4"
tokio-stream = "0.1"
once_cell = "1"
regex = "1"
tokio-compat = "0.1"
tokio01 = { package = "tokio", version = "0.1", features = ["io"] }
futures-util = "0.3"
futures = { package = "futures", version = "0.1" }

[dev-dependencies]
rstest = "0.18"
